# php-ext-fs-notify

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.m4
.github/workflows/: ci.yml  publish.yml  rust.yml
src/: lib.rs
tests/: integration.rs
tests/php/: recommended_watcher.php  test_exception.php
