[package]
name = "php-ext-fs-notify"
version = "0.2.1"
publish = false
edition = "2021"
authors = ["Frederik Bosch <f.bosch@genkgo.nl>"]

[dependencies]
notify = "6.1.1"
phper = "0.13.1"
thiserror = "1.0.43"

[dev-dependencies]
phper-test = "0.13.1"
tempfile = "3"

[build-dependencies]
phper-build = "0.13.1"

[lib]
crate-type = ["lib", "cdylib"]
